@startuml ConceptDomainDetailBridge

class Concept {
    - keyword
    - definitions[ ]
    - relations[ ]
    - questions[ ]
}

class Definition {
    - content
    - isFake
}

class Relation {
    - isFake
    - concept
    - isAfferent
}

class Classification

class Composition

package Primary:withKeyword {
    class DefinitionStatement {
        - statement ="¿Qué es KEYWORD?"
        - solutions [ Definition]
    }

    class ClassificationStatement {
        - statement = "Qué tipos hay de KEYWORD"
        - solutions [Classification]
    }

    class CompositionStatement {
        - statement ="¿Qué conceptos destacarias del KEYWORD?"
        - solutions = [Composition]
    }
}

abstract class OpenQuestion<StatementImplementor>{
    -answers[openAnswer]
    + addToSolutions(statementImplementor)
}

class OpenAnswer {
    - content
    - isEvaluatedBy
}

abstract class MultipleChoiceQuestion<StatementImplementor>{
    - options
    - answers[selectedOption]
    + setOptions(statementImplementor)
}

class Option {
    - content
    - isFake
}

class SelectedOptionAnswer {
    - option
}

class Answer {
    - studentName
    - createdDate
    - isOk
    - isEvaluated
    - evaluatedDate
}

package Bridge {
    abstract class Question {
        - statementImplementor
        - answers[ ]
        # void setStatementImplementor()
        + bool isAnsweredBy(studentName)
    }

    class StatementImplementor {
        - statement
        - solutions[target]
        + setOptions()
        + addToConcept()
    }

}

Question <|-- OpenQuestion
Question <|-- MultipleChoiceQuestion

OpenQuestion o--"0..n" OpenAnswer
MultipleChoiceQuestion o--"2..m" Option
MultipleChoiceQuestion o--"0..n" SelectedOptionAnswer
SelectedOptionAnswer *- Option
Answer <|-- OpenAnswer
Answer <|-- SelectedOptionAnswer

Question *- StatementImplementor
StatementImplementor *-- Concept

StatementImplementor <|-- DefinitionStatement
StatementImplementor <|-- ClassificationStatement
StatementImplementor <|-- CompositionStatement

DefinitionStatement ..> Keyword :statement
ClassificationStatement ..> Keyword :statement
CompositionStatement ..> Keyword: statement

DefinitionStatement ..> Definition :solutions
ClassificationStatement ..> Classification :solutions
CompositionStatement ..-> Composition:solutions

Concept *-- Keyword
Concept o--"0..m" Definition
Concept o-- "0..m" Relation
Relation <|-- Classification
Relation <|-- Composition

@enduml
